fix overflow issue

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,75 +19,73 @@ In the CSS box model:
     The Border: box wraps the padding and content. It extends the padding box to include the border thickness.
     The Margin: box is outside the border. It’s the space around the element. It’s also transparent.
 */
-html{
+/* html{
     scroll-behavior: smooth;
+}
+*/
+.display-1{
+  font-weight: bold;
+}
+.row-01-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .cr-home-card-style{
-    background-color: #E3E0DE;
-    border-radius: 15px;
-    border: 0;
+  background-color: #E3E0DE;
+  border-radius: 15px;
+  border: 0;
 }
-.cr-home-card-title-style{
-    font-weight: bold;
+
+.cr-home-card-01-subtitle-style{
+  padding-left: 5px;
+  padding-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 15px;
 }
-.cr-home-card-subtitle-style{
-    margin-top: 20px;
+
+.cr-home-btn-color{
+  background-color: #2C3337;
 }
-.cr-home-btn-search-style{
-    margin-top: 15px;
-    background-color: #2C3337;
+
+
+
+.cr-hp-1-viewspace{
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 63px);/* Subtract the height of the navbar from the maximum viewport height */
+  width: 100vw;
+  overflow: auto;
+}
+
+.border-test{
+  border: 1px solid red;
+}
+.border-test2{
+  border: 3px solid blue;
+}
+.border-test3{
+  border: 5px solid green;
+}
+.border-test4{
+  border: 5px solid yellow;
 }
 
 .cr-home-img-01-style{
-    border: 1px lightgray solid;
+    max-width: 100%;
+    height: auto;
+    border: 1px solid gray;
     border-radius: 20px;
 }
-
-.cr-home-r1-c1-style{
-    padding-left: 75px;
-    padding-right: 65px;
+.card{
+  height: auto;
+  width: auto;
 }
 
-/*
-.home-col-1{
-    padding-top:  40px;
-    padding-left: 75px;
-    padding-right: 65px;
+.row{
+  height: auto;
+  border: 1px solid red;
 }
-.home-col-2{
-    padding-bottom: 10px;
-    padding-top: 25px;
-}
-.home-photo-1{
-    border: 1px lightgray solid;
-    border-radius: 20px;
-}
-
-.home-card-2{
-    margin-top: 10px;
-}
-.home-card-3{
-    margin-top: 20px;
-    margin-bottom: 30px;
-} */
-
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
-/* html {
-    scroll-behavior: smooth;
-}    */
-
-.cr-hp-1-viewspace{ 
-  height: calc(100vh - 63px); /* Subtract the height of the navbar from the maximum viewport height */
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  /* border: 2px solid red; */
-}
-/* .col-6{
-    border: 2px solid blue;
-} */
